## 3.3.1

- New: Compatibility for server version 4.0.1
- Fixed: wrong title alignment in some list bottom sheets

## 3.3.0

Grocy server version 4.0.0 has some bigger changes with quantity units and unit conversions.
Please read the server changelog carefully for longer explanations of the changes before or after
your server update. We recommend installing the update as our app was mainly tested with it and
recipe ingredient fulfillment information in our app are finally all correct and complete with it.
Older supported versions still work but are not tested with every new change.

We kindly ask you to give our app a good review on Google Play if you like it or a star for our
GitHub repository. This helps us to spread the word about the app and will motivate us to
implement new features.

Specific changes for Grocy server 4.0.0 (other versions should behave the same way as before):

- New: Compatibility for server version 4.0.0 (#644)
- New: Quantity unit conversions can be transitive now (unlimited QU levels)
- New: Product option "Factor purchase to stock unit" is disabled - Use normal product specific
  QU conversions instead, if needed
- New: Product option "Default quantity unit consume"
- New: Product option "Quantity unit for prices"
- New: Product option "Quick open amount" for quick open button on stock page
- Improved: Load label for energy values from server (was fixed kcal before)
- Improved: Show calories and prices on recipe ingredients list
- Fixed: Network error when saving a new product (#642)
- Fixed: Fulfillment info on recipe ingredients list was wrong with substituted products (#669)

All other changes, divided into app sections:

#### Stock

- New: Stock overview page now has checkbox options for all additional fields (#663)
- New: Product choose page after barcode scan now has really useful copy option for products (#636)
- New: Product pictures now can be removed and added with camera and clipboard (#536)