@@ -24,7 +24,7 @@ plugins {
 
 android {
     namespace 'xyz.zedler.patrick.grocy'
-    buildToolsVersion '33.0.2'
+    buildToolsVersion '34.0.0'
 
     buildFeatures {
         viewBinding true
@@ -39,8 +39,8 @@ android {
     defaultConfig {
         applicationId "xyz.zedler.patrick.grocy"
         minSdk 21
-        targetSdk 33
-        compileSdk 33
+        targetSdk 34
+        compileSdk 34
         versionCode 48
         versionName "3.3.0"
         resourceConfigurations += ['ca', 'cs', 'de', 'en', 'es', 'et', 'fr', 'hu', 'it', 'iw', 'ja', 'nb', 'nl', 'pl', 'pt-rBR', 'pt-rPT', 'ru', 'sk', 'sv', 'uk', 'zh-rCN', 'zh-rTW']
@@ -90,19 +90,20 @@ android {
 
 dependencies {
     // Fix for Kotlin build error from some AndroidX dependencies
-    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.20") {
+    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.9.0") {
         because("kotlin-stdlib-jdk8 is now a part of kotlin-stdlib")
     }
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.fragment:fragment:1.6.1'
     implementation 'androidx.preference:preference:1.2.1'
-    implementation 'androidx.browser:browser:1.5.0'
+    implementation 'androidx.browser:browser:1.6.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.6.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
 
     // Navigation framework for easy navigation control using XML
-    implementation 'androidx.navigation:navigation-fragment:2.6.0'
-    implementation 'androidx.navigation:navigation-ui:2.6.0'
+    implementation 'androidx.navigation:navigation-fragment:2.7.0'
+    implementation 'androidx.navigation:navigation-ui:2.7.0'
 
     // Android Room for database and RxJava for Async access of database
     implementation 'androidx.room:room-runtime:2.5.2'
@@ -112,7 +113,7 @@ dependencies {
 
     // Nice material views
     // don't upgrade to 1.10 alpha, only change it to stable 1.9.0 when it has been released
-    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'com.google.android.material:material:1.10.0-alpha05'
 
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
 
