@@ -35,7 +35,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.1.0'
-        classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.6.0'
+        classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.7.0'
     }
 }
 
